--- a/requirements.txt
+++ b/requirements.txt
@@ -3,6 +3,7 @@ coverage==6.1
 dj-database-url==0.5.0
 Django==3.2.8
 django-allauth==0.41.0
+gunicorn==20.1.0
 oauthlib==3.1.1
 Pillow==8.4.0
 psycopg2-binary==2.9.1
